fix(http api): Route GET /students/grades/average was not doing an average of all students grades sum
